templates/b46/style.css
/* ... */
.fluid-width-video-wrapper, video, audio {
  margin: 18px 0;
  margin: 1rem 0; }

.comment_avatar {
  margin: 0 11.25px 12.25px 0;
  margin: 0 .625rem .625rem 0;
  border: 1px solid #aaa;
  float: left;
  overflow: hidden;
  padding: 0 !important; }

.avatar_left {
  margin: 0 11.25px 11.25px 0;
  margin: 0 .625rem .625rem 0;
  float: left; }

.avatar_right {
  margin: 0 0 11.25px 11.25p;
  margin: 0 0 .625rem .625rem;
  float: right; }

.serendipity_calendar {
  border: 1px solid #3e5f81; }
  .serendipity_calendar abbr[title] {
    border: 0; }

.serendipity_calendar tfoot a, .serendipity_calendar tfoot a:active, .serendipity_calendar tfoot a:visited {
  color: #fcfcfc;
  text-decoration: none; }

.serendipity_calendar tfoot a:hover, .serendipity_calendar tfoot a:focus {
  background: #ccdee7;
  color: #222; }

.serendipity_calendar thead, .serendipity_calendar tfoot {
  color: #fcfcfc; }

.serendipity_calendar th, .serendipity_calendar td {
  padding: 2.25px;
  padding: .125rem;
  text-align: center; }

.plugin_comment_body {
  overflow-wrap: break-word; }

.next {
  text-align: right; }
.calendar-nav .month {
  text-align: center; }

.serendipity_freeTag {
  font-size: 14px;
  font-size: .8125rem;
  display: block;
  margin: 0;
  text-align: left; }

.serendipity_freeTag_related ul {
  margin: auto 1.25rem; }

.serendipity_freetag_taglist {
  padding: 18px;
  padding: 1rem;
  background: #eee;
  border: 1px solid #aaa; }
  .serendipity_freetag_taglist ul {
    border: 1px outset #f0ffff;
    background: #f0f8ff; }

.serendipity_freetag_taglist_related {
  font-size: 18px;
  font-size: 1rem;
  margin: 0 0 9px;
  margin: 0 0 .5rem;
  font-weight: bold; }

.commentspice_announce_article {
  font-size: 14px;
  font-size: .8125rem;
  clear: both;
  margin: 0;
  padding: 0;
  text-align: left; }

.commentspice_twitter_input {
  background-position: 99% 50%; }

.twitter_follow {
  margin: 18px 0 15.75px 9px;
  margin: 1.125rem 0 .875rem .5rem;
  float: left; }

/* imagesidebar */
.mediasidebaritem img {
  width: 100%;
  max-width: 400px;
  border-radius: 5px;
  box-shadow: 1px 1px 0px #555;
  margin-bottom: 5px; }

.dtree {
  font-family: initial;
  font-size: 18px;
  font-size: 1rem; }
  .dtree a.node {
    margin-left: 4.5px;
    margin-left: .25rem; }

.post_info .serendipity_freeTag {
  text-align: left;
  padding: 1rem 0; }

.post_info .serendipity_multilingualInfo {
  text-align: left;
  font-size: initial;
  padding: 18px 0;
  padding: 1rem 0; }
  .post_info .serendipity_multilingualInfo a {
    font-size: initial; }
  .post_info .serendipity_multilingualInfo a:hover {
    color: #dc3545; }

#LSResult {
  background: #ccdee7;
  margin-top: 1px;
  opacity: .9;
  z-index: 10; }

#LSShadow {
  border-bottom: 0;
  border-right: 0;
  bottom: 0;
  color: transparent;
  right: 0; }

.serendipity_livesearch_result {
  border: 1px solid #aaa;
  bottom: 0;
  right: 0; }

.serendipity_entrypaging.mobile {
  width: 100%; }
.serendipity_entrypaging a.btn {
  color: #f0f8ff; }
.serendipity_entrypaging_left {
  text-align: left; }
.serendipity_entrypaging_right {
  text-align: right; }

.details .serendipity_entrypaging .epicon { display: none; visibility: hidden; }
.details .serendipity_entrypaging_left:before { content: "← "; }
.details .serendipity_entrypaging_right:after { content: " →"; }

#LSResult, .serendipity_livesearch_result {
  border-radius: 3px; }

.serendipity_entrypaging { overflow: hidden; display: block; }
.serendipity_entrypaging_left { float: left; }
.serendipity_entrypaging_right { float: right; }
.serendipity_entrypaging_left,
.serendipity_entrypaging_right {
    display: block;
    white-space: nowrap;
    width: 48%;
    overflow: hidden; }
    .serendipity_entrypaging_left {
      text-overflow: ellipsis; }
    .serendipity_entrypaging_right {
      text-overflow: "… →"; }
@media only screen and (min-width: 480px) {
  .serendipity_entrypaging_left:only-child,
  .serendipity_entrypaging_right:only-child {
    width: 100%; }
}
@media only screen and (min-width: 992px) {
  .serendipity_entrypaging_left, .serendipity_entrypaging_right {
    width: 100%;
    white-space: initial; }
}

/* comments add per media screen styling start */
@media only screen and (min-width: 481px) {
  #comments article:before, #comments article:after {
    content: "";
    display: block;
    height: 0;
    position: absolute;
    width: 0; }
    #comments article.odd .comment_avatar {
      float: left;
      margin: 0 11.25px 0 0;
      margin: 0 .625rem 0 0; }
    #comments article.comment.even {
      margin: 0 0 36px 45px;
      margin: 0 0 2rem 3rem; }
    #comments article.comment.odd {
      margin: 0 45px 36px 0;
      margin: 0 3rem 2rem 0rem; }
  table.calendar {
    width: 15.4rem; }
    .calendar th, .calendar td {
      text-align:right }
    table.calendar-nav {
      max-width: 24rem; }
  table.calendar-nav .prev span,
  table.calendar-nav .next span {
    display: none; }
}
/* comments add per media screen styling end */
#corenav .navbar-nav > li.dropdown-menu::after {
  content: '';
  display: inline-block;
  border-left: 6px solid transparent;
  border-right: 6px solid transparent;
  border-bottom: 6px solid #fff;
  position: absolute;
  top: -6px;
  left: 10px;
}
#corenav .navbar-navnav > li.dropdown-menu::before {
  content: '';
  display: inline-block;
  border-left: 7px solid transparent;
  border-right: 7px solid transparent;
  border-bottom: 7px solid #ccc;
  border-bottom-color: rgba(0,0,0,.2);
  position: absolute;
  top: -7px;
  left: 9px;
}
/* ... */

